# transcribe-lib

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/transcribe/: __init__.py  core.py
tests/: test_transcribe.py
